2002-04-03  Richard Williamson  <rjw@apple.com>

        Added support for finalURL and wasRedirected to datasource.
        Added additional layouts on resource loads.
        Added more implementations of frame related methods in data source.
        
	* WebView.subproj/IFMainURLHandleClient.mm: (-[IFMainURLHandleClient
	IFURLHandle:didRedirectToURL:]):
	* WebView.subproj/IFPreferences.mm: (+[IFPreferences load]), (-[IFPreferences
	_resourceTimedLayoutDelay]), (-[IFPreferences _resourceTimedLayoutEnabled]):
	* WebView.subproj/IFPreferencesPrivate.h:
	* WebView.subproj/IFWebDataSource.h:
	* WebView.subproj/IFWebDataSource.mm: (-[IFWebDataSource frameNames]),
	(-[IFWebDataSource findDataSourceForFrameNamed:]), (-[IFWebDataSource
	frameExists:]), (-[IFWebDataSource finalURL]), (-[IFWebDataSource
	wasRedirected]):
	* WebView.subproj/IFWebDataSourcePrivate.h:
	* WebView.subproj/IFWebDataSourcePrivate.mm: (-[IFWebDataSourcePrivate dealloc]),
	(-[IFWebDataSource _setTitle:]), (-[IFWebDataSource _setFinalURL:]):
	* WebView.subproj/IFWebFramePrivate.mm: (-[IFWebFrame _scheduleLayout:]),
	(-[IFWebFrame _transitionProvisionalToLayoutAcceptable]), (-[IFWebFrame
	_isLoadComplete]):

2002-04-03  Kenneth Kocienda  <kocienda@apple.com>

        Updated debugging log messages to use new varargs macros.

	* History.subproj/IFWebHistoryPrivate.m: (-[IFWebHistoryPrivate
	removeEntryForURLString:]), (-[IFWebHistoryPrivate _loadHistoryGuts:]),
	(-[IFWebHistoryPrivate loadHistory]), (-[IFWebHistoryPrivate _saveHistoryGuts:]),
	(-[IFWebHistoryPrivate saveHistory]):
	* Misc.subproj/WebKitDebug.h:
	* Misc.subproj/WebKitDebug.m: (timestamp), (WebKitLog):
	* Plugins.subproj/IFPluginView.mm: (-[IFPluginView
	initWithFrame:plugin:url:mime:arguments:mode:]), (-[IFPluginView setWindow]),
	(-[IFPluginView newStream:mimeType:notifyData:]), (-[IFPluginView
	IFURLHandle:resourceDataDidBecomeAvailable:]), (-[IFPluginView
	IFURLHandleResourceDidFinishLoading:data:]), (-[IFPluginView